<resources>
    <string name="app_name">QuizApp</string>
    <string name="masai_school_quiz">Masai School Quiz</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_text">Start Quiz</string>
    <string name="question_text">Question %s/%s</string>
    <string name="next_text">Next</string>
    <string name="username">Username</string>
    <string name="rank">Rank</string>
    <string name="play_again">Play Again</string>
    <string name="rank_text">Rank</string>
    <string name="score_text">Score</string>
    <string name="quiz_instructions">1. The Quiz contains 12 Questions.\n2. Each Question will have 30 seconds. \n3. If Questions are not answered within given 30 seconds then it will be navigated to the next question. \n4. You cannot navigate to previous question. \n</string>
</resources>
