<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cv_user_details"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masai_school_quiz"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_250"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        app:cardCornerRadius="@dimen/dp_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_enter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14"
                android:imeOptions="actionDone"
                android:hint="@string/enter_name" />

            <TextView
                android:id="@+id/tv_start_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_35"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/blue_drawable_bg"
                android:gravity="center"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/enter_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>